Extract Table of Contents from content and fix it to the right - On medium screens position it within the header - On small screens hide it from view

--- a/source/wp-content/themes/wporg-developer/stylesheets/main.css
+++ b/source/wp-content/themes/wporg-developer/stylesheets/main.css
@@ -2773,23 +2773,41 @@ aside[id^="nav_menu"] .widget-title {
   background-color: #fff;
 }
 
-/** Table of Contents */
+/** Header layout: H1, Summary and Table of Contents **/
+.site-main .post-header {
+  display: flex;
+}
+
+.site-main .post-header .post-title {
+  flex: 1;
+}
+
 .site-main .table-of-contents {
-  float: right;
+  position: fixed;
+  top: 210px;
+  right: 30px;
   width: 250px;
   border: 1px solid #eee;
-  margin: 0 0 15px 15px;
+  margin: 24px 0 15px 15px;
   z-index: 1;
-  position: relative;
   color: #555d66;
   background-color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
 }
 
-@media (min-width: 971px) {
+@media (max-width: 1475px) {
   .site-main .table-of-contents {
-    margin: 0 -30px 15px 15px;
+    position: static;
+    top: initial;
+    right: initial;
+  }
+}
+
+@media (max-width: 970px) {
+  .site-main .table-of-contents {
+    position: fixed;
+    visibility: hidden;
   }
 }
 
